# vector-logbook

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: deploy-demo.yml  deploy-pages.yml  update-fixes.yml
backend/: pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  scheduler.py  schemas.py
backend/app/coords/: datasets.py  geo.py  journey.py  resolver.py
backend/app/coords/providers/: faa.py  ofmx.py  openaip.py  validate.py
backend/app/foreflight/: columns.py  exporter.py  importer.py
backend/app/routers/: aircraft.py  flights.py  io.py  journey.py  resolve.py  stats.py
backend/datasets/bundled/: ATTRIBUTION.md  fixes.csv
backend/scripts/: build_fixes.py
backend/tests/: conftest.py  test_api.py  test_bundle_validate.py  test_datasets_multisource.py  test_exporter.py  test_geo.py  test_importer.py  test_journey.py  test_providers_faa.py  test_providers_ofmx.py  test_providers_openaip.py  test_resolver.py  test_roundtrip.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/scripts/: import-constellations.ts
frontend/src/: App.tsx  demo.ts  index.css  router.tsx  theme.tsx  types.ts
frontend/src/api/: client.ts
frontend/src/components/: FieldHint.tsx  FlightMap.tsx  JourneyMap.tsx  Layout.tsx  PageHeader.tsx  PilotIdBand.tsx  Strip.tsx  StripBay.test.tsx  StripBay.tsx  icons.tsx
frontend/src/lib/: constellation-lines.ts  constellations.ts  coordClient.test.ts  coordClient.ts  currency.test.ts  currency.ts  fieldHints.ts  foreflight.ts  (+11 more)
sample/: logbook.csv
(+8 files in other folders)
